made it work phew
